// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Panier d'actions/Carte action à impact CarteSelectionnee smoke-test 1`] = `
<div class="p-7 m-px bg-white rounded-lg flex flex-col gap-4 text-primary-9 text-base font-bold group hover:m-0 hover:cursor-pointer hover:shadow-md !m-0 border-2 border-info-1 box-content !px-5 !py-4 h-[160px]">
  <div class="text-primary-8 text-sm font-bold">
    <div class="flex justify-between">
      <div>
        Mieux consommer
      </div>
      <div>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-secondary-1">
        </span>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-secondary-1">
        </span>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-4">
        </span>
      </div>
    </div>
  </div>
  Désigner une (ou plusieurs personnes) chef de projet transition écologique
  <div class="text-primary-8 text-sm font-bold mt-auto">
    <div class="relative z-0">
      <div data-test="Badge-undefined"
           class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
      >
        <span class="text-success-1 font-bold uppercase leading-4 text-left line-clamp-1 text-xs">
          Complexité simple
        </span>
      </div>
      <div class="invisible group-hover:visible w-full absolute z-10 bottom-0 right-0 bg-white flex justify-end gap-2">
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          Non pertinente
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          En cours
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          Réalisée
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-2">
          Ajouter
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Panier d'actions/Carte action à impact Default smoke-test 1`] = `
<div class="p-7 m-px bg-white rounded-lg flex flex-col gap-4 text-primary-9 text-base font-bold group border border-primary-3 box-content !px-5 !py-4 h-[160px]">
  <div class="text-primary-8 text-sm font-bold">
    <div class="flex justify-between">
      <div>
        Mieux consommer
      </div>
      <div>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-secondary-1">
        </span>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-secondary-1">
        </span>
        <span class="ri-money-euro-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-4">
        </span>
      </div>
    </div>
  </div>
  Désigner une (ou plusieurs personnes) chef de projet transition écologique
  <div class="text-primary-8 text-sm font-bold mt-auto">
    <div class="relative z-0">
      <div data-test="Badge-undefined"
           class="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
      >
        <span class="text-success-1 font-bold uppercase leading-4 text-left line-clamp-1 text-xs">
          Complexité simple
        </span>
      </div>
      <div class="invisible group-hover:visible w-full absolute z-10 bottom-0 right-0 bg-white flex justify-end gap-2">
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          Non pertinente
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          En cours
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-3">
          Réalisée
        </button>
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5 !px-2">
          Ajouter
        </button>
      </div>
    </div>
  </div>
</div>
`;
